# kuIotBigdata

./: .gitignore  README.md  kaggle_titanic2.ipynb  test.txt
algorithms/: readme.md
c_src/: A2Z  A2Z.c  A2Z_ex  A2Z_ex.c  Makefile  absoluteValue  absoluteValue.c  alphabetic  alphabetic.c  arithmetic  arithmetic.c  arrayAssignment.c  arrayCompare.c  baseball.c  baseball_ex.c  bigLetter  bigLetter.c  bubbleSorting.c  celsius2Fahr  celsius2Fahr.c  circle  circle.c  compare.c  dice.c  dice2.c  dice2_ex.c  exam_print  factorial.c  fahr2Celsius.c  fahr2Celsius2  fahr2Celsius2.c  fahr2Celsius3  fahr2Celsius3.c  fahr2Celsius3_ex  fahr2Celsius3_ex.c  findMaxInArray.c  findMaxInArray2.c  findMaxInArray2_my.c  findValueInArray.c  findValueInArray2.c  (+122 more)
c_src/personal/cmake/: CMakeList.md  CMakeLists.txt  bar.c
cpp_src/: main.c
flask_web/: app.py
lecture/: hello_server.c
mysql/: DCL.sql  DDL.sql  View.sql  anomaly.sql  built-ins.sql  delete_foreign_key.sql  demo_madang.sql  grant_privileges.sql  index.sql  insert_data.sql  newmadang.mwb  procedure.sql  select_data.sql  select_groupby.sql  trigger.sql
opencv/: intro.md
opencv/chap02/: CMakeLists.txt  helloworld.cpp
opencv/chap05/: CMakeLists.txt  arithmetic.cpp  brightTrackBar.cpp  brightness.cpp  contrast.cpp  histogram.cpp  histogramEqualize.cpp  histogramstretch.cpp  saturate.cpp  saturated.cpp
python/: assertTest.py  calculate.py  calculateAvg.py  celsius.py  classVariable.py  collectionModule.py  condition.py  decimalToBinary.py  decorator.py  dictionaryFunction.py  fileOpen.py  fileWrite.py  filterMap.py  for.py  function1.py  inheritance.py  input.py  keywordArgument.py  lambda.py  list.py  list2.py  listComprehension.py  location.py  mapReduce.py  mkdir1.py  multiplicationtable.py  multiplicationtable2.py  myoperator.py  numberGame.py  package_ex.py  packing.py  polymorphism.py  pythonClass.py  reverseString.py  setUnion.py  splitFunction.py  stringFormat.py  stringMethod.py  textMining.py  tryExcept.py  (+8 more)
python-C-mysql/: booklist.c  booklist.py
pythonData/: .python-version  AssessingModel.py  anovaTest.py  aucCurve.py  categoriData.py  categoriPlot.py  chi2Statistics.py  configParserTest.py  configureTest.py  confusionMatrix.py  cooksDistance.py  correlation.py  csv1.py  csv3.py  csv4.py  descriminantAnalysis.py  deviation.py  dominantVariable.py  downSampling.py  effectiveSize.py  example.cfg  fStatistics.py  featureEnginnering.py  gowersDistance.py  hierarchicalClustering.py  histogramTest.py  htmlTest.py  json1.py  json_example.json  kMeanClustering.py  kMeanClusteringDetermingN.py  knn2Test.py  (+39 more)
python_C_mysql/: .clangd  CMakeLists.txt  Makefile  booklist.c
(+536 files in other folders)
